# Bank-system-managment

./: .gitignore  CMakeLists.txt  README.md  a.out  bank.cpp  bank.h  functiontobank.cpp  functiontobank.h  loginsystem.cpp  loginsystem.h  main.cpp  run.sh  systembank.cpp  systembank.h
include/: Account.h  Bank.h  BankOperation.h  BankOptions.h  CliInput.h  FileStorage.h  Functiontobank.h  InputInterface.h  LoginInfo.h  LoginSystem.h  Loginsystem.h  Options.h  OutputInterface.h  Person.h  StorageInterface.h  Systembank.h  account.h  bank.h  functiontobank.h  loginsystem.h  systembank.h
src/: Account.cpp  CMakeLists.txt  CliInput.cpp  FileStorage.cpp  Functiontobank.cpp  Loginsystem.cpp  Person.cpp  Systembank.cpp  account.cpp  bank.cpp  functiontobank.cpp  loginsystem.cpp  main.cpp  systembank.cpp
uts/: CMakeLists.txt  mainTest.cpp  ut.cpp
